# github-dashboard-server

./: CHANGELOG.md  Cargo.toml  README.md  config.toml  graphql.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
aicedash/: Cargo.toml
data/: questions.json
fixtures/: open_issues.json  pull_requests.json
src/: api.rs  checkout.rs  conf.rs  config.toml  database.rs  embedder.rs  embeddings.rs  generate.rs  github.rs  google.rs  graphql.rs  lang_graph.rs  llm.rs  main.rs  open_issues.graphql  outbound.rs  pull_requests.graphql  rag.rs  rag_evaluation.rs  rag_sample.rs  settings.rs  utils.rs  vector_db.rs  web.rs
src/api/: discussion.rs  discussion_stat.rs  issue.rs  issue_stat.rs  pull_request.rs  pull_request_stat.rs
src/database/: discussion.rs  issue.rs  pull_request.rs
src/github/: discussions.graphql  issues.graphql  pull_requests.graphql
src/github/query/: pull_requests.graphql
src/graphql/: discussion.rs  issue.rs  issue_stat.rs  pull_request.rs  rag.rs  resolved_issue.rs  resolved_issue_stat.rs  total_count_field.rs
src/lang_graph/: graph.rs  schema2.graphql  session_keys.rs  vector_db.rs
src/lang_graph/tasks/: context_reranking.rs  graphql_executor.rs  graphql_generator.rs  mod.rs  query_enhancement.rs  rag_generation.rs  response_formatter.rs  segment_parser.rs  statistics_response.rs  type_validation.rs  vector_search.rs
src/lang_graph/types/: query.rs  response.rs
src/lang_graph/utils/: mod.rs
src/outbound/graphql/: issues.graphql
src/semantic_parsing/: mod.rs  schema.graphql  schema_contrived.graphql
