[package]
name = "github-dashboard-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-graphql = "7"
async-graphql-warp = "7"
base64 = "0.22"
bincode = "1"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["toml"], default-features = false }
directories = "6"
git2 = "0.20"

graphql_client = "0.14"
jiff = "0.2"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3", features = ["tls"] }

[dev-dependencies]
tempfile = "3"
