[package]
name = "github-dashboard-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-graphql = "7"
async-graphql-warp = "7"
base64 = "0.22"
bincode = "1"
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", features = ["toml"], default-features = false }
directories = "6"
git2 = "0.20"

graphql_client = "0.14"
jiff = { version = "0.2", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fjall = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = { version = "0.3", features = ["tls"] }

graph-flow = { git = "https://github.com/a-agmon/rs-graph-llm.git", package = "graph-flow", branch = "main", features = [
    "rig",
] }
qdrant-client = "1.14.1"

async-trait = "0.1"
rig-qdrant = "=0.1.14"
uuid = "1.17.0"
rig-core = "0.13.0"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
